--- a/css/bookpage.css
+++ b/css/bookpage.css
@@ -1,117 +1,21 @@
-.container{
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    margin-top: 15px;
-    margin-inline: 25px;
-    margin-bottom: 15px;
-    gap:15px;
-    box-sizing: border-box;
-}
-
-.sidebarL{
-    display:grid;
-    grid-template-rows: 2fr 1fr;
-    gap:10px;
-    height:fit-content;
-    position:sticky;
-}
-.pictureBar{
-    background-color: #d1d0d0;
-    border-radius: 12px;
-    padding:10px;
+.container {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center; 
+    gap: 1em;
+    padding: 1em;
 }
-img{
+
+.container img {
     max-height: 350px;
     max-width: 270px;
-    padding-bottom: 10px;
+    padding: 10px;
 }
-.pictureBar > button{
-    width:fit-content;
-}
-.shareBar{
-    background-color: #d1d0d0;
-    border-radius: 12px;
-    padding:0px 0px 15px 0px;
-    text-align: center;
-    height:fit-content;
-}
-.shareBar > button{
-    font-size: large;
-}
-.mainBar{
-    display:grid;
-    grid-template-rows: 120px 120px 2fr;
-    gap:10px;
-}
-.titleBar{
-    display:grid;
-    grid-template-columns: 2fr 1fr;
-    background-color: #ededed;
-    max-height:auto;
-}
-.mainTitle{
-    margin-top: 10px;
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-.hyperlinks{
-    display:flex;
-    flex-direction: column;
-    align-items: flex-end;
-    padding:15px;
-}
-.publishBar{
-    margin-top: auto;
-    background-color: #d1d0d0;
-    border-radius: 12px;
-    padding-top:10px;
-    padding-bottom:10px;
-    display:grid;
-    grid-template-columns: repeat(4, 1fr);
-    text-align: center;
-}
-.overBar{
-    background-color: #d1d0d0;
-    border-radius: 12px;
-    padding:15px;
-    display: flex;
-    flex-direction: column;
-    text-indent: 20px;
-}
-.sidebarR{
-    display:grid;
-    grid-template-rows: 50px 80px 200px 80px;
-    gap:15px;
-    border-radius: 12px;
-    padding-top:15px;
-    padding-left:15px;
-    padding-bottom: 15px;
-    background-color: #d1d0d0;
-    position:sticky;
-}
-.detailBar{
-    background-color: #d1d0d0;
-}
-.isbnBar{
-    display: flex;
-    flex-direction: column;
-    height:fit-content;
-}
-.genreBar{
-    display:flex;
-    flex-direction: column;
 
-    max-height:fit-content;
-}
-.ratingBar{
-    display:flex;
-    flex-direction: column;
-    max-height:fit-content;
+.container a{
+   font-size: 25px;
+   font-weight: bold;
+   text-decoration: none;
+   color:#3164f4;
 }
 
 p3{
@@ -121,19 +25,22 @@ p3{
     padding-bottom:10px;
     margin:0px;
 }
+
 p2{
     font-size: 15px;
     font-stretch: extra-condensed;
     padding:0px;
     margin:0px;
 }
-h1{
+
+.container h1{
     font-size:45px;
     margin:0px;
     padding:0px;
     font-weight: bolder;
     font-stretch: extra-expanded;
 }
+
 p9{
     font-size:20px;
     margin-top:12px;
@@ -141,38 +48,97 @@ p9{
     font-weight:lighter;
     text-indent: 1em;
 }
+
 p10{
     font-size:30px;
     margin:0px;
     padding:0px;
     font-weight:bold;
 }
-a.two{
-    font-size: 30px;
-    font-weight: bolder;
-    text-decoration: none;
-}
-a.two{
-   font-size: 25px;
-   font-weight: bold;
-   text-decoration: none;
-}
-a.two:link{
-   color:#3164f4;
-}
-a.two:visited{
-   color:#3164f4;
-}
-a.one{
-   font-size: 25px;
-   font-weight: bold;
-   text-decoration: none;
-}
-a.one:link{
-   color:#3164f4;
-}
-a.one:visited{
-   color:#3164f4;
+
+.sidebarL{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: center;
+    height:fit-content;
+    background-color: #d1d0d0;
+    border-radius: 12px;
 }
 
+.pictureBar{
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
 
+.shareBar{
+    background-color: #d1d0d0;
+    border-radius: 12px;
+    padding:0px 0px 15px 0px;
+    text-align: center;
+    height:fit-content;
+}
+
+.shareBar > button{
+    font-size: large;
+}
+
+.mainBar {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.mainTitle{
+    display:flex;
+    flex-direction: column;
+}
+
+.hyperlinks{
+    display:flex;
+    justify-content: flex-end;
+    gap: 1em;
+}
+
+.publishBar{
+    background-color: #d1d0d0;
+    border-radius: 12px;
+    padding: 1em 0;
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+}
+
+.overBar{
+    background-color: #d1d0d0;
+    border-radius: 12px;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.overBar p2 {
+    text-indent: 2em;
+}
+
+.sidebarR{
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    background-color: #d1d0d0;
+    padding: 1em;
+    min-width: 15%;
+}
+
+.sidebarR > div {
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 1200px) {
+    .container {
+        flex-direction: row;
+    }
+}
